tests/negative/test_expr_addrof_non_ref.orb
fnc main() {
    i32 x = 1;
    &(x+1);
}